chore: WOW-167 update circleci config to match new floral visitors multiselect

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,6 +102,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_PHENOLOGY=${PROD_OBS_FIELD_IDS_PHENOLOGY:?}
             VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=${PROD_OBS_FIELD_IDS_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=${PROD_OBS_FIELD_IDS_EVIDENCE_THREATS:?}
+            VUE_APP_OBS_FIELD_IDS_FLORAL_VISITORS=${PROD_OBS_FIELD_IDS_FLORAL_VISITORS:?}
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${PROD_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
             VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${PROD_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_GA_CODE=${PROD_GA_CODE:?}
@@ -159,6 +160,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_PHENOLOGY=${BETA_OBS_FIELD_IDS_PHENOLOGY:?}
             VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=${BETA_OBS_FIELD_IDS_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=${BETA_OBS_FIELD_IDS_EVIDENCE_THREATS:?}
+            VUE_APP_OBS_FIELD_IDS_FLORAL_VISITORS=${BETA_OBS_FIELD_IDS_FLORAL_VISITORS:?}
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${BETA_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
             VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${BETA_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_GA_CODE=${BETA_GA_CODE:?}
@@ -216,6 +218,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_PHENOLOGY=${DEV_OBS_FIELD_IDS_PHENOLOGY:?}
             VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=${DEV_OBS_FIELD_IDS_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=${DEV_OBS_FIELD_IDS_EVIDENCE_THREATS:?}
+            VUE_APP_OBS_FIELD_IDS_FLORAL_VISITORS=${DEV_OBS_FIELD_IDS_FLORAL_VISITORS:?}
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${DEV_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
             VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${DEV_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_GA_CODE=${DEV_GA_CODE:?}
