--- a/package.json
+++ b/package.json
@@ -20,18 +20,21 @@
   "dependencies": {
     "@sentry/browser": "^5.6.2",
     "@sentry/integrations": "^5.6.1",
-    "browser-image-compression": "https://github.com/tomsaleeba/browser-image-compression#issue-17",
     "comlink": "4.2.0",
     "core-js": "^3.4.3",
+    "dms2dec": "^1.1.0",
     "exif-js": "2.3.0",
+    "exif-reader": "^1.0.3",
     "fetch-retry": "^2.2.3",
     "is_js": "^0.9.0",
+    "jimp": "^0.9.3",
     "jsonwebtoken": "^8.5.1",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "ml5": "0.4.3",
     "moment": "^2.24.0",
     "onsenui": "^2.10.9",
+    "piexifjs": "^1.0.6",
     "pkce-challenge": "^2",
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
