Update obs fields based on latest spec
Specifically:
- rename {Approx=>Estimated} area searched (m2)
- add Accuracy of search area calcuation
- add Precise area measurements - length
- add Precise area measurements - width
- Epiphyte height
  - rename to Epiphyte height on the host
  - change from number input to dropdown list of options
- reposition everything to match the newest spec
- removed altitude question
- removed Area of exact count (replaced by precise area measurements)

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=69,70,71,72,73,74
 VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=63,102,110
 VUE_APP_OBS_FIELD_IDS_PHENOLOGY=63,64,65,66,67,68
 VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=51
+VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=111
 VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=52
 VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=54
 VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=49
@@ -23,11 +24,14 @@ VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=45
 VUE_APP_OBS_FIELD_ID_HOST_TREE=44
 VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION=69
 VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=39
+VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH=112
+VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH=113
 VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=47
 VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=42
 
 #VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE    # use default
 #VUE_APP_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL # use default
-#VUE_APP_OBS_FIELD_LANDUSE_CONSERVATION    # use default
 #VUE_APP_OBS_FIELD_ACCURACY_EXACT          # use default
+#VUE_APP_OBS_FIELD_ACCURACY_PRECISE        # use default
+#VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED      # use default
 #VUE_APP_NOT_COLLECTED                     # use default
