feat: WOW-166 add all required obs field IDs for help anchors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,13 +98,22 @@ jobs:
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=${PROD_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${PROD_OBS_FIELD_ID_AREA_OF_POPULATION:?}
             VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${PROD_OBS_FIELD_ID_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_COMMUNITY_NOTES=${PROD_OBS_FIELD_ID_COMMUNITY_NOTES:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${PROD_OBS_FIELD_ID_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_COVER_OF_DOMINANT_STRATUM=${PROD_OBS_FIELD_ID_COVER_OF_DOMINANT_STRATUM:?}
+            VUE_APP_OBS_FIELD_ID_DOMINANT_PHENOLOGY=${PROD_OBS_FIELD_ID_DOMINANT_PHENOLOGY:?}
+            VUE_APP_OBS_FIELD_ID_DOMINANT_VEG=${PROD_OBS_FIELD_ID_DOMINANT_VEG:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${PROD_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
+            VUE_APP_OBS_FIELD_ID_FLORIVORY_DAMAGE=${PROD_OBS_FIELD_ID_FLORIVORY_DAMAGE:?}
+            VUE_APP_OBS_FIELD_ID_HEIGHT_OF_DOMINANT_VEG=${PROD_OBS_FIELD_ID_HEIGHT_OF_DOMINANT_VEG:?}
             VUE_APP_OBS_FIELD_ID_HOST_TREE=${PROD_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION=${PROD_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION:?}
+            VUE_APP_OBS_FIELD_ID_LANDFORM_TYPE=${PROD_OBS_FIELD_ID_LANDFORM_TYPE:?}
+            VUE_APP_OBS_FIELD_ID_LITTER=${PROD_OBS_FIELD_ID_LITTER:?}
             VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${PROD_OBS_FIELD_ID_ORCHID_TYPE:?}
             VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH=${PROD_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH:?}
             VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH=${PROD_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH:?}
+            VUE_APP_OBS_FIELD_ID_SEARCH_EFFORT=${PROD_OBS_FIELD_ID_SEARCH_EFFORT:?}
             VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=${PROD_OBS_FIELD_ID_SOIL_STRUCTURE:?}
             VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${PROD_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${PROD_GA_CODE:?}
@@ -158,13 +167,22 @@ jobs:
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=${BETA_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${BETA_OBS_FIELD_ID_AREA_OF_POPULATION:?}
             VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${BETA_OBS_FIELD_ID_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_COMMUNITY_NOTES=${BETA_OBS_FIELD_ID_COMMUNITY_NOTES:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${BETA_OBS_FIELD_ID_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_COVER_OF_DOMINANT_STRATUM=${BETA_OBS_FIELD_ID_COVER_OF_DOMINANT_STRATUM:?}
+            VUE_APP_OBS_FIELD_ID_DOMINANT_PHENOLOGY=${BETA_OBS_FIELD_ID_DOMINANT_PHENOLOGY:?}
+            VUE_APP_OBS_FIELD_ID_DOMINANT_VEG=${BETA_OBS_FIELD_ID_DOMINANT_VEG:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${BETA_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
+            VUE_APP_OBS_FIELD_ID_FLORIVORY_DAMAGE=${BETA_OBS_FIELD_ID_FLORIVORY_DAMAGE:?}
+            VUE_APP_OBS_FIELD_ID_HEIGHT_OF_DOMINANT_VEG=${BETA_OBS_FIELD_ID_HEIGHT_OF_DOMINANT_VEG:?}
             VUE_APP_OBS_FIELD_ID_HOST_TREE=${BETA_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION=${BETA_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION:?}
+            VUE_APP_OBS_FIELD_ID_LANDFORM_TYPE=${BETA_OBS_FIELD_ID_LANDFORM_TYPE:?}
+            VUE_APP_OBS_FIELD_ID_LITTER=${BETA_OBS_FIELD_ID_LITTER:?}
             VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${BETA_OBS_FIELD_ID_ORCHID_TYPE:?}
             VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH=${BETA_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH:?}
             VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH=${BETA_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH:?}
+            VUE_APP_OBS_FIELD_ID_SEARCH_EFFORT=${BETA_OBS_FIELD_ID_SEARCH_EFFORT:?}
             VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=${BETA_OBS_FIELD_ID_SOIL_STRUCTURE:?}
             VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${BETA_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${BETA_GA_CODE:?}
@@ -218,13 +236,22 @@ jobs:
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=${DEV_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${DEV_OBS_FIELD_ID_AREA_OF_POPULATION:?}
             VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${DEV_OBS_FIELD_ID_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_COMMUNITY_NOTES=${DEV_OBS_FIELD_ID_COMMUNITY_NOTES:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${DEV_OBS_FIELD_ID_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_COVER_OF_DOMINANT_STRATUM=${DEV_OBS_FIELD_ID_COVER_OF_DOMINANT_STRATUM:?}
+            VUE_APP_OBS_FIELD_ID_DOMINANT_PHENOLOGY=${DEV_OBS_FIELD_ID_DOMINANT_PHENOLOGY:?}
+            VUE_APP_OBS_FIELD_ID_DOMINANT_VEG=${DEV_OBS_FIELD_ID_DOMINANT_VEG:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${DEV_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
+            VUE_APP_OBS_FIELD_ID_FLORIVORY_DAMAGE=${DEV_OBS_FIELD_ID_FLORIVORY_DAMAGE:?}
+            VUE_APP_OBS_FIELD_ID_HEIGHT_OF_DOMINANT_VEG=${DEV_OBS_FIELD_ID_HEIGHT_OF_DOMINANT_VEG:?}
             VUE_APP_OBS_FIELD_ID_HOST_TREE=${DEV_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION=${DEV_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION:?}
+            VUE_APP_OBS_FIELD_ID_LANDFORM_TYPE=${DEV_OBS_FIELD_ID_LANDFORM_TYPE:?}
+            VUE_APP_OBS_FIELD_ID_LITTER=${DEV_OBS_FIELD_ID_LITTER:?}
             VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${DEV_OBS_FIELD_ID_ORCHID_TYPE:?}
             VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH=${DEV_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH:?}
             VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH=${DEV_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH:?}
+            VUE_APP_OBS_FIELD_ID_SEARCH_EFFORT=${DEV_OBS_FIELD_ID_SEARCH_EFFORT:?}
             VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=${DEV_OBS_FIELD_ID_SOIL_STRUCTURE:?}
             VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${DEV_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${DEV_GA_CODE:?}
