--- a/.env
+++ b/.env
@@ -18,13 +18,22 @@ VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=51
 VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=111
 VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=54
 VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=49
+VUE_APP_OBS_FIELD_ID_COMMUNITY_NOTES=57
 VUE_APP_OBS_FIELD_ID_COUNT=53
+VUE_APP_OBS_FIELD_ID_COVER_OF_DOMINANT_STRATUM=101
+VUE_APP_OBS_FIELD_ID_DOMINANT_PHENOLOGY=62
+VUE_APP_OBS_FIELD_ID_DOMINANT_VEG=99
 VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=45
+VUE_APP_OBS_FIELD_ID_FLORIVORY_DAMAGE=59
+VUE_APP_OBS_FIELD_ID_HEIGHT_OF_DOMINANT_VEG=100
 VUE_APP_OBS_FIELD_ID_HOST_TREE=44
 VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION=69
+VUE_APP_OBS_FIELD_ID_LANDFORM_TYPE=46
+VUE_APP_OBS_FIELD_ID_LITTER=43
 VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=39
 VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_LENGTH=112
 VUE_APP_OBS_FIELD_ID_SEARCH_AREA_CALC_PRECISE_WIDTH=113
+VUE_APP_OBS_FIELD_ID_SEARCH_EFFORT=50
 VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=47
 VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=42
 
