--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "@sentry/browser": "^5.6.2",
     "@sentry/integrations": "^5.6.1",
+    "base64-js": "^1.3.1",
     "comlink": "4.2.0",
     "core-js": "3.6.4",
     "dms2dec": "^1.1.0",
     "exif-js": "2.3.0",
     "exif-reader": "^1.0.3",
     "fetch-retry": "^2.2.3",
+    "formdata-polyfill": "^3.0.19",
     "is_js": "^0.9.0",
     "jimp": "^0.9.3",
     "jsonwebtoken": "^8.5.1",
