--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "exif-reader": "^1.0.3",
     "fetch-retry": "^2.2.3",
     "formdata-polyfill": "^3.0.19",
+    "fuse.js": "^5.0.10-beta",
     "is_js": "^0.9.0",
     "jimp": "^0.9.3",
     "jsonwebtoken": "^8.5.1",
