--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "base64-js": "^1.3.1",
     "comlink": "4.2.0",
     "core-js": "3.6.4",
+    "dayjs": "^1.8.23",
     "dms2dec": "^1.1.0",
     "exif-js": "2.3.0",
     "exif-reader": "^1.0.3",
@@ -35,7 +36,6 @@
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "ml5": "^0.5.0",
-    "moment": "^2.24.0",
     "onsenui": "^2.10.9",
     "piexifjs": "^1.0.6",
     "pkce-challenge": "^2",
