--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "fuse.js": "^5.0.10-beta",
     "is_js": "^0.9.0",
     "jimp": "^0.9.3",
-    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "ml5": "^0.5.0",
