--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,22 @@
 {
   "vetur.validation.template": false,
-
   "prettier.eslintIntegration": true,
-
-  "eslint.autoFixOnSave": true,
-  "eslint.options": { "extensions": [".html", ".js", ".vue", ".scss"] },
+  "prettier.printWidth": 80,
+  "eslint.options": {
+    "extensions": [
+      ".html",
+      ".js",
+      ".vue",
+      ".scss"
+    ]
+  },
   "eslint.validate": [
     "javascript",
-    {
-      "language": "vue",
-      "autoFix": true
-    }
+    "vue",
+    "html",
   ],
-
   "javascript.validate.enable": false,
   "javascript.format.enable": false,
-
   "[scss]": {
     "editor.formatOnSave": true
   },
