feat: WOW-216 allow forcing a select question into a radiogroup for when the values are too wide for browsers that don't know how to word warp (looking at you Samsung Internet and Safari)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${PROD_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
             VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${PROD_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_OBS_FIELD_IDS_PHENOLOGY=${PROD_OBS_FIELD_IDS_PHENOLOGY:?}
+            VUE_APP_OBS_FIELD_IDS_WIDE_SELECTS=${PROD_OBS_FIELD_IDS_WIDE_SELECTS:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${PROD_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=${PROD_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${PROD_OBS_FIELD_ID_AREA_OF_POPULATION:?}
@@ -163,6 +164,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${BETA_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
             VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${BETA_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_OBS_FIELD_IDS_PHENOLOGY=${BETA_OBS_FIELD_IDS_PHENOLOGY:?}
+            VUE_APP_OBS_FIELD_IDS_WIDE_SELECTS=${BETA_OBS_FIELD_IDS_WIDE_SELECTS:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${BETA_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=${BETA_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${BETA_OBS_FIELD_ID_AREA_OF_POPULATION:?}
@@ -232,6 +234,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${DEV_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
             VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${DEV_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_OBS_FIELD_IDS_PHENOLOGY=${DEV_OBS_FIELD_IDS_PHENOLOGY:?}
+            VUE_APP_OBS_FIELD_IDS_WIDE_SELECTS=${DEV_OBS_FIELD_IDS_WIDE_SELECTS:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${DEV_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=${DEV_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${DEV_OBS_FIELD_ID_AREA_OF_POPULATION:?}
