--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ VUE_APP_OBS_FIELD_IDS_FLORAL_VISITORS=103,104,105,106,107,108,109,110
 VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=69,70,71,72,73,74
 VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=63,102,110
 VUE_APP_OBS_FIELD_IDS_PHENOLOGY=63,64,65,66,67,68
+VUE_APP_OBS_FIELD_IDS_WIDE_SELECTS=42
 VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=51
 VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=111
 VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=54
