chore: refactor optional circleci env vars

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,14 +126,13 @@ jobs:
             VUE_APP_BBOX_LAT_MAX=$PROD_BBOX_LAT_MAX
             VUE_APP_BBOX_LON_MIN=$PROD_BBOX_LON_MIN
             VUE_APP_BBOX_LON_MAX=$PROD_BBOX_LON_MAX
+            VUE_APP_OBS_FIELD_DEFAULT_ACCURACY=$PROD_OBS_FIELD_DEFAULT_ACCURACY
+            VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$PROD_OBS_FIELD_ORCHID_TYPE_EPIPHYTE
+            VUE_APP_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL=$PROD_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL
+            VUE_APP_OBS_FIELD_ACCURACY_PRECISE=$PROD_OBS_FIELD_ACCURACY_PRECISE
+            VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$PROD_OBS_FIELD_ACCURACY_ESTIMATED
+            VUE_APP_NOT_COLLECTED=$PROD_NOT_COLLECTED
             EOF
-            # now some optional items
-            [ ! -z $PROD_OBS_FIELD_DEFAULT_ACCURACY ] && {
-              echo "VUE_APP_OBS_FIELD_DEFAULT_ACCURACY=$PROD_OBS_FIELD_DEFAULT_ACCURACY" >> $theFile
-            }
-            [ ! -z $PROD_OBS_FIELD_ORCHID_TYPE_EPIPHYTE ] && {
-              echo "VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$PROD_OBS_FIELD_ORCHID_TYPE_EPIPHYTE" >> $theFile
-            }
             echo "[INFO] contents of $theFile"
             cat $theFile
       - run:
@@ -201,14 +200,13 @@ jobs:
             VUE_APP_BBOX_LAT_MAX=$BETA_BBOX_LAT_MAX
             VUE_APP_BBOX_LON_MIN=$BETA_BBOX_LON_MIN
             VUE_APP_BBOX_LON_MAX=$BETA_BBOX_LON_MAX
+            VUE_APP_OBS_FIELD_DEFAULT_ACCURACY=$BETA_OBS_FIELD_DEFAULT_ACCURACY
+            VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$BETA_OBS_FIELD_ORCHID_TYPE_EPIPHYTE
+            VUE_APP_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL=$BETA_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL
+            VUE_APP_OBS_FIELD_ACCURACY_PRECISE=$BETA_OBS_FIELD_ACCURACY_PRECISE
+            VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$BETA_OBS_FIELD_ACCURACY_ESTIMATED
+            VUE_APP_NOT_COLLECTED=$BETA_NOT_COLLECTED
             EOF
-            # now some optional items
-            [ ! -z $BETA_OBS_FIELD_DEFAULT_ACCURACY ] && {
-              echo "VUE_APP_OBS_FIELD_DEFAULT_ACCURACY=$BETA_OBS_FIELD_DEFAULT_ACCURACY" >> $theFile
-            }
-            [ ! -z $BETA_OBS_FIELD_ORCHID_TYPE_EPIPHYTE ] && {
-              echo "VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$BETA_OBS_FIELD_ORCHID_TYPE_EPIPHYTE" >> $theFile
-            }
             echo "[INFO] contents of $theFile"
             cat $theFile
       - run:
@@ -276,14 +274,13 @@ jobs:
             VUE_APP_BBOX_LAT_MAX=$DEV_BBOX_LAT_MAX
             VUE_APP_BBOX_LON_MIN=$DEV_BBOX_LON_MIN
             VUE_APP_BBOX_LON_MAX=$DEV_BBOX_LON_MAX
+            VUE_APP_OBS_FIELD_DEFAULT_ACCURACY=$DEV_OBS_FIELD_DEFAULT_ACCURACY
+            VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$DEV_OBS_FIELD_ORCHID_TYPE_EPIPHYTE
+            VUE_APP_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL=$DEV_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL
+            VUE_APP_OBS_FIELD_ACCURACY_PRECISE=$DEV_OBS_FIELD_ACCURACY_PRECISE
+            VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$DEV_OBS_FIELD_ACCURACY_ESTIMATED
+            VUE_APP_NOT_COLLECTED=$DEV_NOT_COLLECTED
             EOF
-            # now some optional items
-            [ ! -z $DEV_OBS_FIELD_DEFAULT_ACCURACY ] && {
-              echo "VUE_APP_OBS_FIELD_DEFAULT_ACCURACY=$DEV_OBS_FIELD_DEFAULT_ACCURACY" >> $theFile
-            }
-            [ ! -z $DEV_OBS_FIELD_ORCHID_TYPE_EPIPHYTE ] && {
-              echo "VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$DEV_OBS_FIELD_ORCHID_TYPE_EPIPHYTE" >> $theFile
-            }
             echo "[INFO] contents of $theFile"
             cat $theFile
       - run:
