feat: add Missions behind a feature flag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,6 +132,7 @@ jobs:
             VUE_APP_OBS_FIELD_ACCURACY_PRECISE=$PROD_OBS_FIELD_ACCURACY_PRECISE
             VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$PROD_OBS_FIELD_ACCURACY_ESTIMATED
             VUE_APP_NOT_COLLECTED=$PROD_NOT_COLLECTED
+            VUE_APP_FEATURE_FLAG_MISSIONS=$PROD_FEATURE_FLAG_MISSIONS
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -206,6 +207,7 @@ jobs:
             VUE_APP_OBS_FIELD_ACCURACY_PRECISE=$BETA_OBS_FIELD_ACCURACY_PRECISE
             VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$BETA_OBS_FIELD_ACCURACY_ESTIMATED
             VUE_APP_NOT_COLLECTED=$BETA_NOT_COLLECTED
+            VUE_APP_FEATURE_FLAG_MISSIONS=$BETA_FEATURE_FLAG_MISSIONS
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -280,6 +282,7 @@ jobs:
             VUE_APP_OBS_FIELD_ACCURACY_PRECISE=$DEV_OBS_FIELD_ACCURACY_PRECISE
             VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$DEV_OBS_FIELD_ACCURACY_ESTIMATED
             VUE_APP_NOT_COLLECTED=$DEV_NOT_COLLECTED
+            VUE_APP_FEATURE_FLAG_MISSIONS=$DEV_FEATURE_FLAG_MISSIONS
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
