chore: add Search and News pages, both hidden behind feature flags

--- a/.env
+++ b/.env
@@ -43,3 +43,8 @@ VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=42
 #VUE_APP_OBS_FIELD_ACCURACY_PRECISE        # use default
 #VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED      # use default
 #VUE_APP_NOT_COLLECTED                     # use default
+
+# enable optional features here
+# VUE_APP_FEATURE_FLAG_MISSIONS=true
+# VUE_APP_FEATURE_FLAG_NEWS=true
+# VUE_APP_FEATURE_FLAG_SEARCH=true
