--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,8 @@ jobs:
             VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$PROD_OBS_FIELD_ACCURACY_ESTIMATED
             VUE_APP_NOT_COLLECTED=$PROD_NOT_COLLECTED
             VUE_APP_FEATURE_FLAG_MISSIONS=$PROD_FEATURE_FLAG_MISSIONS
+            VUE_APP_FEATURE_FLAG_NEWS=$PROD_FEATURE_FLAG_NEWS
+            VUE_APP_FEATURE_FLAG_SEARCH=$PROD_FEATURE_FLAG_SEARCH
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -208,6 +210,8 @@ jobs:
             VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$BETA_OBS_FIELD_ACCURACY_ESTIMATED
             VUE_APP_NOT_COLLECTED=$BETA_NOT_COLLECTED
             VUE_APP_FEATURE_FLAG_MISSIONS=$BETA_FEATURE_FLAG_MISSIONS
+            VUE_APP_FEATURE_FLAG_NEWS=$BETA_FEATURE_FLAG_NEWS
+            VUE_APP_FEATURE_FLAG_SEARCH=$BETA_FEATURE_FLAG_SEARCH
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -283,6 +287,8 @@ jobs:
             VUE_APP_OBS_FIELD_ACCURACY_ESTIMATED=$DEV_OBS_FIELD_ACCURACY_ESTIMATED
             VUE_APP_NOT_COLLECTED=$DEV_NOT_COLLECTED
             VUE_APP_FEATURE_FLAG_MISSIONS=$DEV_FEATURE_FLAG_MISSIONS
+            VUE_APP_FEATURE_FLAG_NEWS=$DEV_FEATURE_FLAG_NEWS
+            VUE_APP_FEATURE_FLAG_SEARCH=$DEV_FEATURE_FLAG_SEARCH
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
