--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "rollup": "^1.27.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sourcemaps": "^0.6.2",
     "sass-loader": "^8.0.0",
     "servor": "^2.2.1",
     "vue-template-compiler": "^2.6.10",
