--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
+    "lint:check": "vue-cli-service lint --no-fix",
     "build:serve": "BROWSERSLIST_ENV=debug DISABLE_MINIFY=1 VUE_APP_FORCE_VUE_DEVTOOLS=1 yarn build && servor dist/ index.html --no-browser",
     "build:serve:watch": "nodemon --ext vue,js,mjs,json --watch src --watch sw-src --watch package.json --exec bash -c 'yarn build:serve'",
     "firebase:deploy:ci": "doit() { firebase --non-interactive --token ${FIREBASE_TOKEN:?} deploy --only hosting:${1:?}; }; doit",
-    "prettier:check": "prettier \"**/*.{vue,scss,sass,js}\" --list-different",
-    "prettier:format-all": "prettier --write \"**/*.{vue,scss,sass,js}\"",
     "test:e2e:headless": "vue-cli-service test:e2e --headless",
     "test:unit:debug": "node --inspect-brk ./node_modules/.bin/vue-cli-service test:unit --runInBand"
   },
