chore: make immediate landuse a wide question in default .env

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=82,83,84,85,86,87,88,89,90,91,92,93,94,95
 VUE_APP_OBS_FIELD_IDS_FLORAL_VISITORS=103,104,105,106,107,108,109,110
 VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=102,110,114
 VUE_APP_OBS_FIELD_IDS_PHENOLOGY=63,64,65,66,67,68
-VUE_APP_OBS_FIELD_IDS_WIDE_SELECTS=42
+VUE_APP_OBS_FIELD_IDS_WIDE_SELECTS=42,200
 VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=51
 VUE_APP_OBS_FIELD_ID_ACCURACY_OF_SEARCH_AREA_CALC=111
 VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=54
