--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_NEWS=$PROD_FEATURE_FLAG_NEWS
             VUE_APP_FEATURE_FLAG_SEARCH=$PROD_FEATURE_FLAG_SEARCH
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$PROD_MAX_SW_REQ_FAIL_COUNT
+            VUE_APP_FORCE_VUE_DEVTOOLS=$PROD_FORCE_VUE_DEVTOOLS
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -201,6 +202,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_NEWS=$BETA_FEATURE_FLAG_NEWS
             VUE_APP_FEATURE_FLAG_SEARCH=$BETA_FEATURE_FLAG_SEARCH
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$BETA_MAX_SW_REQ_FAIL_COUNT
+            VUE_APP_FORCE_VUE_DEVTOOLS=$BETA_FORCE_VUE_DEVTOOLS
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -277,6 +279,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_NEWS=$DEV_FEATURE_FLAG_NEWS
             VUE_APP_FEATURE_FLAG_SEARCH=$DEV_FEATURE_FLAG_SEARCH
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$DEV_MAX_SW_REQ_FAIL_COUNT
+            VUE_APP_FORCE_VUE_DEVTOOLS=$DEV_FORCE_VUE_DEVTOOLS
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
