feat: add feature to let user's manually report bugs and send most of their local app state to aid in remote troubleshooting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,6 +124,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_MISSIONS=$PROD_FEATURE_FLAG_MISSIONS
             VUE_APP_FEATURE_FLAG_NEWS=$PROD_FEATURE_FLAG_NEWS
             VUE_APP_FEATURE_FLAG_SEARCH=$PROD_FEATURE_FLAG_SEARCH
+            VUE_APP_FEATURE_FLAG_BUG_REPORT=$PROD_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$PROD_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$PROD_FORCE_VUE_DEVTOOLS
             EOF
@@ -201,6 +202,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_MISSIONS=$BETA_FEATURE_FLAG_MISSIONS
             VUE_APP_FEATURE_FLAG_NEWS=$BETA_FEATURE_FLAG_NEWS
             VUE_APP_FEATURE_FLAG_SEARCH=$BETA_FEATURE_FLAG_SEARCH
+            VUE_APP_FEATURE_FLAG_BUG_REPORT=$BETA_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$BETA_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$BETA_FORCE_VUE_DEVTOOLS
             EOF
@@ -278,6 +280,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_MISSIONS=$DEV_FEATURE_FLAG_MISSIONS
             VUE_APP_FEATURE_FLAG_NEWS=$DEV_FEATURE_FLAG_NEWS
             VUE_APP_FEATURE_FLAG_SEARCH=$DEV_FEATURE_FLAG_SEARCH
+            VUE_APP_FEATURE_FLAG_BUG_REPORT=$DEV_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$DEV_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$DEV_FORCE_VUE_DEVTOOLS
             EOF
