--- a/.env
+++ b/.env
@@ -47,3 +47,4 @@ VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=42
 # VUE_APP_FEATURE_FLAG_MISSIONS=true
 # VUE_APP_FEATURE_FLAG_NEWS=true
 # VUE_APP_FEATURE_FLAG_SEARCH=true
+# VUE_APP_FEATURE_FLAG_BUG_REPORT=true
