--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
             VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${PROD_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${PROD_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=production
-            VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
+            VUE_APP_GMAPS_API_KEY=${PROD_GMAPS_API_KEY:?}
             VUE_APP_SENTRY_DSN=${SENTRY_DSN:?}
             # optional items
             VUE_APP_BBOX_LAT_MIN=$PROD_BBOX_LAT_MIN
@@ -127,6 +127,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$PROD_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$PROD_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$PROD_FORCE_VUE_DEVTOOLS
+            VUE_APP_GCP_ERRORS_API_KEY=${PROD_GCP_ERRORS_API_KEY}
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -186,7 +187,7 @@ jobs:
             VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${BETA_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${BETA_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=beta
-            VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
+            VUE_APP_GMAPS_API_KEY=${BETA_GMAPS_API_KEY:?}
             VUE_APP_SENTRY_DSN=${SENTRY_DSN:?}
             # optional items
             VUE_APP_BBOX_LAT_MIN=$BETA_BBOX_LAT_MIN
@@ -205,6 +206,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$BETA_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$BETA_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$BETA_FORCE_VUE_DEVTOOLS
+            VUE_APP_GCP_ERRORS_API_KEY=${BETA_GCP_ERRORS_API_KEY}
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -264,7 +266,7 @@ jobs:
             VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${DEV_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${DEV_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=development
-            VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
+            VUE_APP_GMAPS_API_KEY=${DEV_GMAPS_API_KEY:?}
             VUE_APP_SENTRY_DSN=${SENTRY_DSN:?}
             # optional items
             VUE_APP_BBOX_LAT_MIN=$DEV_BBOX_LAT_MIN
@@ -283,6 +285,7 @@ jobs:
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$DEV_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$DEV_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$DEV_FORCE_VUE_DEVTOOLS
+            VUE_APP_GCP_ERRORS_API_KEY=${DEV_GCP_ERRORS_API_KEY}
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
