--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vue-cli-service build && rollup -c && workbox injectManifest",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
-    "lint:check": "vue-cli-service lint --no-fix --max-warnings 0",
+    "lint": "vue-cli-service lint src/ tests/ sw-src/",
+    "lint:check": "vue-cli-service lint --no-fix --max-warnings 0 src/ tests/ sw-src/",
     "build:serve": "BROWSERSLIST_ENV=debug DISABLE_MINIFY=1 VUE_APP_FORCE_VUE_DEVTOOLS=1 yarn build && servor dist/ index.html --no-browser",
     "build:serve:watch": "nodemon --ext vue,js,mjs,json --delay 2 --watch src --watch sw-src --watch package.json --exec bash -c 'yarn build:serve'",
     "firebase:deploy:ci": "doit() { firebase --non-interactive --token ${FIREBASE_TOKEN:?} deploy --only hosting:${1:?}; }; doit",
@@ -52,6 +52,11 @@
     "vue2-google-maps": "0.10.7",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-cli": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
     "worker-plugin": "3.2.0"
   },
   "devDependencies": {
@@ -90,10 +95,6 @@
     "vue-template-compiler": "^2.6.10",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-merge": "^4.2.1",
-    "workbox-background-sync": "^5.0.0",
-    "workbox-cli": "^5.0.0",
-    "workbox-routing": "^5.0.0",
-    "workbox-strategies": "^5.0.0",
     "worker-loader": "2.0.0"
   },
   "postcss": {
