fix: bug where Safari would get stuck doing the migration, add config item for controlling workbox logging, change how we trigger queue processing after a migration so it happen after the page refresh

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,8 +127,9 @@ jobs:
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$PROD_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$PROD_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$PROD_FORCE_VUE_DEVTOOLS
-            VUE_APP_GCP_ERRORS_API_KEY=${PROD_GCP_ERRORS_API_KEY}
-            VUE_APP_SW_QUEUE_MAX_RETENTION=${PROD_SW_QUEUE_MAX_RETENTION}
+            VUE_APP_GCP_ERRORS_API_KEY=$PROD_GCP_ERRORS_API_KEY
+            VUE_APP_SW_QUEUE_MAX_RETENTION=$PROD_SW_QUEUE_MAX_RETENTION
+            VUE_APP_ENABLE_WORKBOX_LOGGING=${PROD_ENABLE_WORKBOX_LOGGING:-false}
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -207,8 +208,9 @@ jobs:
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$BETA_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$BETA_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$BETA_FORCE_VUE_DEVTOOLS
-            VUE_APP_GCP_ERRORS_API_KEY=${BETA_GCP_ERRORS_API_KEY}
-            VUE_APP_SW_QUEUE_MAX_RETENTION=${BETA_SW_QUEUE_MAX_RETENTION}
+            VUE_APP_GCP_ERRORS_API_KEY=$BETA_GCP_ERRORS_API_KEY
+            VUE_APP_SW_QUEUE_MAX_RETENTION=$BETA_SW_QUEUE_MAX_RETENTION
+            VUE_APP_ENABLE_WORKBOX_LOGGING=${BETA_ENABLE_WORKBOX_LOGGING:-true}
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
@@ -287,8 +289,9 @@ jobs:
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$DEV_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$DEV_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$DEV_FORCE_VUE_DEVTOOLS
-            VUE_APP_GCP_ERRORS_API_KEY=${DEV_GCP_ERRORS_API_KEY}
-            VUE_APP_SW_QUEUE_MAX_RETENTION=${DEV_SW_QUEUE_MAX_RETENTION}
+            VUE_APP_GCP_ERRORS_API_KEY=$DEV_GCP_ERRORS_API_KEY
+            VUE_APP_SW_QUEUE_MAX_RETENTION=$DEV_SW_QUEUE_MAX_RETENTION
+            VUE_APP_ENABLE_WORKBOX_LOGGING=${DEV_ENABLE_WORKBOX_LOGGING:-true}
             EOF
             echo "[INFO] contents of $theFile"
             cat $theFile
