--- a/.env
+++ b/.env
@@ -25,6 +25,7 @@ VUE_APP_INAT_PROJECT_SLUG=wow-dev2
 VUE_APP_DEPLOYED_ENV_NAME=local-development
 VUE_APP_GMAPS_API_KEY=TODOgetYourselfAKeyFromTheGoogleCloudConsole
 VUE_APP_GA_CODE=off
+VUE_APP_ENABLE_WORKBOX_LOGGING=true
 VUE_APP_SENTRY_DSN=off
 VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=75,76,77,78,79,80,81,102
 VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,114
