--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "workbox-precaching": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "worker-plugin": "3.2.0"
+    "worker-plugin": "3.2.0",
+  "minipass": "2.7.0",
+  "sharp": "^0.23.0"
+
   },
   "devDependencies": {
     "@sentry/webpack-plugin": "^1.8.0",
