--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,7 @@ jobs:
             VUE_APP_NOT_COLLECTED=$PROD_NOT_COLLECTED
             VUE_APP_FEATURE_FLAG_MISSIONS=$PROD_FEATURE_FLAG_MISSIONS
             VUE_APP_FEATURE_FLAG_NEWS=$PROD_FEATURE_FLAG_NEWS
-            VUE_APP_FEATURE_FLAG_SEARCH=$PROD_FEATURE_FLAG_SEARCH
+            VUE_APP_FEATURE_FLAG_DRAFT=$PROD_FEATURE_FLAG_DRAFT
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$PROD_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$PROD_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$PROD_FORCE_VUE_DEVTOOLS
@@ -207,7 +207,7 @@ jobs:
             VUE_APP_NOT_COLLECTED=$BETA_NOT_COLLECTED
             VUE_APP_FEATURE_FLAG_MISSIONS=$BETA_FEATURE_FLAG_MISSIONS
             VUE_APP_FEATURE_FLAG_NEWS=$BETA_FEATURE_FLAG_NEWS
-            VUE_APP_FEATURE_FLAG_SEARCH=$BETA_FEATURE_FLAG_SEARCH
+            VUE_APP_FEATURE_FLAG_DRAFT=$BETA_FEATURE_FLAG_DRAFT
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$BETA_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$BETA_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$BETA_FORCE_VUE_DEVTOOLS
@@ -291,7 +291,7 @@ jobs:
             VUE_APP_NOT_COLLECTED=$DEV_NOT_COLLECTED
             VUE_APP_FEATURE_FLAG_MISSIONS=$DEV_FEATURE_FLAG_MISSIONS
             VUE_APP_FEATURE_FLAG_NEWS=$DEV_FEATURE_FLAG_NEWS
-            VUE_APP_FEATURE_FLAG_SEARCH=$DEV_FEATURE_FLAG_SEARCH
+            VUE_APP_FEATURE_FLAG_DRAFT=$DEV_FEATURE_FLAG_DRAFT
             VUE_APP_FEATURE_FLAG_BUG_REPORT=$DEV_FEATURE_FLAG_BUG_REPORT
             VUE_APP_MAX_SW_REQ_FAIL_COUNT=$DEV_MAX_SW_REQ_FAIL_COUNT
             VUE_APP_FORCE_VUE_DEVTOOLS=$DEV_FORCE_VUE_DEVTOOLS
